# lncrawlod

./: MANIFEST.in  Makefile  README.md  __main__.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  setup_pyi.py  tox.ini
lncrawl/: __init__.py
lncrawl/app/: __init__.py  arguments.py  config.py
lncrawl/app/binder/: __init__.py  binder.py  catalog.py  config.py
lncrawl/app/browser/: browser.py  response.py  soup_ex.py
lncrawl/app/context/: __init__.py  chapter.py  context.py  events.py  volume.py
lncrawl/app/models/: author.py  novel.py
lncrawl/app/scraper/: __init__.py  catalog.py  context.py  scraper.py  sources.py
lncrawl/app/utility/: __init__.py  arg_builder.py  dict_utils.py  module_utils.py  soup_utils.py  text_utils.py  url_utils.py
lncrawl/binders/: __init__.py  json.py
lncrawl/console/: __init__.py
lncrawl/console/analyzer/: __init__.py  context.py  generator.py  help.py  models.py  process.py
lncrawl/console/app/: __init__.py
lncrawl/console/test/: __init__.py  test_command.py
lncrawl/sources/: __init__.py  indomtl.py
lncrawl/sources/en/: lnmtl.py  www-novelhall-com.py
tests/test_app/: test_arguments.py  test_browser.py  test_models.py  test_scraper.py
